--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+   
+   <link rel="icon" href="img/67762-ride-horse-amusement-carousel-free-transparent-image-hq.png">
    <title>Carousel</title>
 </head>
 <body>
@@ -14,7 +16,7 @@
 
       <div class="arrowLeftBox">
 
-         <div class="arrows">
+         <div class="prev">
 
             <i class="fas fa-angle-left freccia"></i>
 
@@ -28,7 +30,7 @@
             <div class="carouselImage">
 
 
-               <img class="active" src="img/venezia.jpg" alt="Venezia">
+               <img class="active first" src="img/venezia.jpg" alt="Venezia">
                <img src="img/firenze.jpg" alt="Firenze">
                <img src="img/napoli.jpg" alt="Napoli">
                <img src="img/palermo.jpg" alt="Palermo">
@@ -52,14 +54,21 @@
 
       <div class="arrowRightBox">
 
-         <div class="arrows">
+         <div class="next">
 
             <i class="fas fa-angle-right freccia"></i>
 
          </div>
 
 
-      </div>
+         <div class="nav">
+
+            <i class="fas fa-circle active first"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle last"></i>
+
+         </div>
 
    
    </div>
